--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="The 90 Minute App : How to build a Sencha Ext JS app in (under) 90 Minutes ...">
+    <meta name="description" content="The 90 Minute App : How to build a Sencha Ext JS app in (under) 90 Minutes">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico">
 
     <title>The 90 Minute App</title>
 </head>
@@ -57,11 +59,11 @@
             </li>
         </ol>
 
-        <ol>
+        <ul>
             <li>
                 <a href="https://speakerdeck.com/stoe/the-90-minute-app">https://speakerdeck.com/stoe/the-90-minute-app</a>
             </li>
-        </ol>
+        </ul>
 
         <p>Copyright 2014 Sencha, Inc.</p>
     </section>
